--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "display most recently added bookmarks",
     "version": "1.0.0",
     "author": "shun",
-    "permissions":["bookmarks"],
+    "permissions":["bookmarks","history"],
     "chrome_url_overrides":{
         "bookmarks":"index.html"
     },
