--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "start": "concurrently \"npm run tsc:w\" \"npm run lite\""
   },
   "dependencies": {
+    "@angular2-material/grid-list": "^2.0.0-alpha.8-2",
     "angular2": "2.0.0-beta.9",
-    "systemjs": "0.19.22",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.22",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
