--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
     "content_scripts":[
         {
             "matches":["https://www.youtube.com/*"],
-            "js":["youtube.js"]
+            "js":["youtube.js"],
+            "run_at":"document_start"
         }
     ],
     "content_security_policy": "script-src 'self' https://code.angularjs.org 'unsafe-eval'; object-src 'self'"
