--- a/chromeFiles/manifest.json
+++ b/chromeFiles/manifest.json
@@ -19,5 +19,9 @@
             "run_at":"document_start"
         }
     ],
+    "background":{
+        "scripts":["moveTab.js"],
+        "persistent": false
+    },
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
