--- a/chromeFiles/manifest.json
+++ b/chromeFiles/manifest.json
@@ -21,8 +21,7 @@
         }
     ],
     "background":{
-        "scripts":["moveTab.js"],
-        "persistent": false
+        "scripts":["moveTab.js"]
     },
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
