--- a/chromeFiles/manifest.json
+++ b/chromeFiles/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "newtab Extension",
-    "description": "display most recently added bookmarks",
+    "description": "see README",
     "version": "1.0.0",
     "author": "shun",
     "permissions":[
@@ -16,12 +16,18 @@
     "content_scripts":[
         {
             "matches":["https://www.youtube.com/*"],
-            "js":["DOMchange.js"],
+            "js":[
+                "logging.js",
+                "DOMchange.js"
+            ],
             "run_at":"document_start"
         }
     ],
     "background":{
-        "scripts":["moveTab.js"]
+        "scripts":[
+            "logging.js",
+            "moveTab.js"
+        ]
     },
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
