remove video src, simpler and bug free

--- a/chromeFiles/manifest.json
+++ b/chromeFiles/manifest.json
@@ -10,6 +10,8 @@
 
         "*://dotamax.com/*",
         "*://www.douyu.com/*",
+        "*://www.hanfan.cc/*",
+        "*://manhua.dmzj.com/*",
 
         "bookmarks",
         "history",
